openshadinglanguage-jnd/OSL-1.13.12.0/00-Erreur-compile-AVEC-OIIO-3.x.TXT

[ 12%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/codegen.cpp.o
In file included from /build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/gabornoise.h:8,
                 from /build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/gabornoise.cpp:7:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/../liboslexec/oslexec_pvt.h: In function ‘int OSL_v1_13::tex_interp_to_code(StringParam)’:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/../liboslexec/oslexec_pvt.h:2515:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2515 |         mode = TextureOpt::InterpSmartBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/../liboslexec/oslexec_pvt.h:2517:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2517 |         mode = TextureOpt::InterpBilinear;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/../liboslexec/oslexec_pvt.h:2519:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2519 |         mode = TextureOpt::InterpBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslnoise/../liboslexec/oslexec_pvt.h:2521:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2521 |         mode = TextureOpt::InterpClosest;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
make[2]: *** [src/liboslnoise/CMakeFiles/oslnoise.dir/build.make:79: src/liboslnoise/CMakeFiles/oslnoise.dir/gabornoise.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
[ 13%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/oslcomp.cpp.o
[ 14%] Linking CXX executable ../../bin/dual_test
[ 15%] Building CXX object src/liboslquery/CMakeFiles/oslquery.dir/osogram.cpp.o
In file included from /build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/typespec.cpp:13:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h: In function ‘int OSL_v1_13::tex_interp_to_code(StringParam)’:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2515:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2515 |         mode = TextureOpt::InterpSmartBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2517:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2517 |         mode = TextureOpt::InterpBilinear;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2519:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2519 |         mode = TextureOpt::InterpBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2521:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2521 |         mode = TextureOpt::InterpClosest;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
[ 15%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/symtab.cpp.o
make[1]: *** [CMakeFiles/Makefile2:1588: src/liboslnoise/CMakeFiles/oslnoise.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 16%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/typecheck.cpp.o
make[2]: *** [src/liboslquery/CMakeFiles/oslquery.dir/build.make:141: src/liboslquery/CMakeFiles/oslquery.dir/__/liboslexec/typespec.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
[ 17%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/__/liboslexec/oslexec.cpp.o
[ 18%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/__/liboslexec/typespec.cpp.o
make[1]: *** [CMakeFiles/Makefile2:1397: src/liboslquery/CMakeFiles/oslquery.dir/all] Error 2
[ 19%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/oslgram.cpp.o
[ 19%] Built target dual_test
[ 19%] Building CXX object src/liboslcomp/CMakeFiles/oslcomp.dir/osllex.cpp.o
In file included from /build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec.cpp:12:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h: In function ‘int OSL_v1_13::tex_interp_to_code(StringParam)’:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2515:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2515 |         mode = TextureOpt::InterpSmartBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2517:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2517 |         mode = TextureOpt::InterpBilinear;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2519:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2519 |         mode = TextureOpt::InterpBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2521:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2521 |         mode = TextureOpt::InterpClosest;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
make[2]: *** [src/liboslcomp/CMakeFiles/oslcomp.dir/build.make:163: src/liboslcomp/CMakeFiles/oslcomp.dir/__/liboslexec/oslexec.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/typespec.cpp:13:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h: In function ‘int OSL_v1_13::tex_interp_to_code(StringParam)’:
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2515:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2515 |         mode = TextureOpt::InterpSmartBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2517:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2517 |         mode = TextureOpt::InterpBilinear;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2519:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2519 |         mode = TextureOpt::InterpBicubic;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/src/liboslexec/oslexec_pvt.h:2521:28: error: cannot convert ‘const OpenImageIO_v3_0::Tex::InterpMode’ to ‘int’ in assignment
 2521 |         mode = TextureOpt::InterpClosest;
      |                ~~~~~~~~~~~~^~~~~~~~~~~~~
      |                            |
      |                            const OpenImageIO_v3_0::Tex::InterpMode
make[2]: *** [src/liboslcomp/CMakeFiles/oslcomp.dir/build.make:177: src/liboslcomp/CMakeFiles/oslcomp.dir/__/liboslexec/typespec.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1366: src/liboslcomp/CMakeFiles/oslcomp.dir/all] Error 2
make: *** [Makefile:166: all] Error 2
make: Leaving directory '/build/openshadinglanguage-git/src/OpenShadingLanguage-1.13.11.0/build'
==> ERROR: A failure occurred in build().
